# oxmon

./: .gitignore  AGENTS.md  AI_REPORT_TEST.md  CLAUDE.md  CLOUD_FEATURES.md  CLOUD_FIELD_AUDIT.md  CLOUD_SETUP_COMPLETE.md  Cargo.toml  Cross.toml  Dockerfile.agent  Dockerfile.server  MIGRATION.md  Makefile  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  README.zh-CN.md  TEST_RESULT.md  TEST_SUMMARY.md  ai_report_demo.html  rustfmt.toml  test_ai_report.sh
.claude/: plan.md
.claude/plans/: instance-contact-routing.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
config/: agent.example.toml  ai-accounts.seed.example.json  ai-accounts.test.json  channels.seed.example.json  cloud-accounts.seed.example.json  dictionaries.seed.example.json  dictionaries.seed.system.json  dingtalk_at_examples.json  rules.seed.example.json  runtime.seed.example.json  server.example.toml  server.test.toml  server.toml
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m001_initial_schema.rs  m002_cloud_instances_gpu_integer.rs  m003_cloud_instances_datetime_rfc3339.rs  m004_cloud_instances_auto_renew_flag_bool.rs  m005_drop_ai_accounts_api_secret.rs  m006_ai_reports_remove_date_unique.rs  m007_ai_check_jobs.rs  m008_cloud_accounts_endpoint.rs  m009_agents_system_info.rs  m010_agent_report_logs.rs  m011_metrics_alert_events.rs  m012_audit_logs.rs  m013_users_extended_fields.rs  m014_login_throttles.rs  m015_cloud_accounts_region_for_sign.rs  m016_cloud_accounts_scp_auth_token.rs  m017_instance_contacts.rs  m018_cloud_accounts_scp_metric_names.rs
crates/oxmon-agent/: Cargo.toml
crates/oxmon-agent/src/: config.rs  main.rs
crates/oxmon-ai/: Cargo.toml
crates/oxmon-ai/src/: analyzer.rs  lib.rs  models.rs  prompt.rs
crates/oxmon-ai/src/providers/: mod.rs  zhipu.rs
crates/oxmon-alert/: Cargo.toml
crates/oxmon-alert/src/: engine.rs  lib.rs  rules.rs  tests.rs  window.rs
crates/oxmon-alert/src/rules/: cert_expiration.rs  cloud_scale.rs  rate_of_change.rs  threshold.rs  trend_prediction.rs
crates/oxmon-cloud/: Cargo.toml
crates/oxmon-cloud/src/: alibaba.rs  collector.rs  error.rs  lib.rs  sangfor.rs  tencent.rs
crates/oxmon-collector/: Cargo.toml
crates/oxmon-collector/src/: cpu.rs  disk.rs  lib.rs  load.rs  memory.rs  network.rs
crates/oxmon-common/: Cargo.toml  build.rs
crates/oxmon-common/src/: i18n.rs  id.rs  lib.rs  types.rs
crates/oxmon-notify/: Cargo.toml
crates/oxmon-notify/src/: alert_report_template.rs  cert_report_template.rs  channels.rs  error.rs  lib.rs  manager.rs  plugin.rs  report_template.rs  routing.rs  tests.rs  utils.rs
crates/oxmon-notify/src/channels/: dingtalk.rs  email.rs  sms.rs  webhook.rs  weixin.rs
crates/oxmon-notify/src/templates/: ai_report.html  alert_report.html  cert_alert_report.html
crates/oxmon-server/: Cargo.toml
crates/oxmon-server/examples/: test_ai_report.rs
crates/oxmon-server/src/: ai_seed.rs  api.rs  app.rs  audit.rs  auth.rs  channel_seed.rs  cloud_seed.rs  config.rs  dictionary_seed.rs  grpc.rs  lib.rs  logging.rs  main.rs  middleware.rs  openapi.rs  rule_builder.rs  rule_seed.rs  runtime_seed.rs  state.rs
crates/oxmon-server/src/ai/: api.rs  mod.rs  report.rs  scheduler.rs
crates/oxmon-server/src/api/: admin.rs  alerts.rs  audit.rs  certificates.rs  dashboard.rs  dictionaries.rs  instance_contacts.rs  notifications.rs  pagination.rs  sys_configs.rs  system.rs  whitelist.rs
crates/oxmon-server/src/cert/: api.rs  checker.rs  collector.rs  mod.rs  scheduler.rs
crates/oxmon-server/src/cloud/: api.rs  mod.rs  scheduler.rs
crates/oxmon-server/src/grpc/: auth.rs  mod.rs  service.rs
crates/oxmon-server/tests/: app_id_middleware_test.rs  grpc_agent_report_flow.rs  http_api_full_coverage.rs  openapi_contract_guard.rs
crates/oxmon-server/tests/common/: mod.rs
crates/oxmon-storage/: Cargo.toml
crates/oxmon-storage/src/: auth.rs  cert_store.rs  engine.rs  error.rs  lib.rs  partition.rs  tests.rs
crates/oxmon-storage/src/entities/: agent.rs  agent_report_log.rs  agent_whitelist.rs  ai_account.rs  ai_check_job.rs  ai_report.rs  alert_event.rs  alert_rule.rs  audit_log.rs  cert_check_result.rs  cert_domain.rs  certificate_detail.rs  cloud_account.rs  cloud_collection_state.rs  cloud_instance.rs  dictionary_type.rs  instance_contact.rs  login_throttle.rs  metric.rs  mod.rs  notification_channel.rs  notification_log.rs  notification_recipient.rs  notification_silence_window.rs  system_config.rs  system_dictionary.rs  user.rs
crates/oxmon-storage/src/store/: agent.rs  ai.rs  ai_check_job.rs  alert.rs  audit.rs  cert.rs  cloud.rs  config.rs  dictionary.rs  instance_contact.rs  mod.rs  notification.rs  user.rs
data/: cert.db  cert.db-shm  cert.db-wal
docs/: CLOUD_MONITORING_TEST.md  agent-auth-migration.md  api-improvement-plan.md  api-reference.md  api-reference.zh-CN.md  product-design-spec.md
examples/: test_ai_report.rs
openspec/changes/add-domain-cert-check/: design.md  proposal.md  tasks.md
openspec/changes/add-notification-plugin-system/: design.md  proposal.md  tasks.md
openspec/changes/add-request-response-logging/: design.md  proposal.md
openspec/changes/enhance-cert-monitoring-and-agent-whitelist/: design.md  proposal.md  tasks.md
openspec/changes/frontend-light-theme-design/: design.md  proposal.md  tasks.md
openspec/specs/dashboard-api/: spec.md
openspec/specs/notification/: spec.md
proto/: metrics.proto
scripts/: README.md  check-cloud-instances.sh  check-no-secrets.sh  daily_ai_report_cron.sh  encrypt_password.py  encrypt_password_openssl.sh  import-cloud-accounts.sh  install.sh  install_daily_report_cron.sh  item2.sh  migrate_ai_accounts.sh  migrate_cloud_accounts.sh  migrate_system_configs_to_channels.sh  mock-e2e.sh  mock-query-check.sh  mock-report-all.sh  mock-report.sh  release.sh  reset.sh  sync_cloud_and_cert_data.sh  sync_notification_config.sh  test-cloud-auto.sh  test-cloud-monitoring.sh  test_ai_schedule.sh  test_ai_send_report.sh  test_runtime_seed.sh  trigger-cloud-collection.sh  verify_ai_accounts.sh  verify_cloud_accounts.sh
(+33 files in other folders)
