[workspace]
members = [
    "crates/oxmon-common",
    "crates/oxmon-collector",
    "crates/oxmon-storage",
    "crates/oxmon-alert",
    "crates/oxmon-notify",
    "crates/oxmon-agent",
    "crates/oxmon-server",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# System info
sysinfo = "0.38"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Glob matching
glob-match = "0.2"

# TLS / Certificate parsing
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1"
x509-parser = "0.18"
trust-dns-resolver = "0.23"

# Snowflake ID
rs-snowflake = "0.6"

# JWT
jsonwebtoken = "9"

# Crypto (HMAC signing)
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
bcrypt = "0.16"
ring = "0.17"
rsa = { version = "0.9", features = ["sha2"] }

# Random
rand = "0.8"

# URL encoding
urlencoding = "2"

# HTTP middleware
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = "0.6"

# OpenAPI documentation
utoipa = { version = "5", features = ["chrono", "preserve_order"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Internal crates
oxmon-common = { path = "crates/oxmon-common" }
oxmon-collector = { path = "crates/oxmon-collector" }
oxmon-storage = { path = "crates/oxmon-storage" }
oxmon-alert = { path = "crates/oxmon-alert" }
oxmon-notify = { path = "crates/oxmon-notify" }

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
redundant_clone = "deny"
large_enum_variant = "deny"
needless_collect = "warn"
clone_on_copy = "deny"
