[workspace]
members = [
    "crates/oxmon-common",
    "crates/oxmon-collector",
    "crates/oxmon-storage",
    "crates/oxmon-alert",
    "crates/oxmon-notify",
    "crates/oxmon-cloud",
    "crates/oxmon-ai",
    "crates/oxmon-agent",
    "crates/oxmon-server",
    "crates/migration",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_neo = "0.11"
toml = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
sea-orm = { version = "=2.0.0-rc.35", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "=2.0.0-rc.35", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# System info
sysinfo = "0.38"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Glob matching
glob-match = "0.2"

# TLS / Certificate parsing
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1"
x509-parser = "0.18"
hickory-resolver = "0.25"

# Snowflake ID
rs-snowflake = "0.6"

# JWT
jsonwebtoken = "9"

# Crypto (HMAC signing)
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
bcrypt = "0.16"
ring = "0.17"
rsa = { version = "=0.10.0-rc.16", features = ["sha2"] }

# Random
rand = "0.10"

# URL encoding
urlencoding = "2"

# HTTP middleware
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = "0.6"

# OpenAPI documentation
utoipa = { version = "5", features = ["chrono", "preserve_order"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Internal crates
oxmon-common = { path = "crates/oxmon-common" }
oxmon-collector = { path = "crates/oxmon-collector" }
oxmon-storage = { path = "crates/oxmon-storage" }
oxmon-alert = { path = "crates/oxmon-alert" }
oxmon-notify = { path = "crates/oxmon-notify" }
oxmon-cloud = { path = "crates/oxmon-cloud" }
oxmon-ai = { path = "crates/oxmon-ai" }
migration = { path = "crates/migration" }

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
redundant_clone = "deny"
large_enum_variant = "deny"
needless_collect = "warn"
clone_on_copy = "deny"

# 错误处理 - warn 以便渐进式修复，目标是迁移到 deny
unwrap_used = "warn"
expect_used = "warn"

# 调试与输出 - 防止调试代码进入生产
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"

# 代码完整性
todo = "warn"
