[package]
name = "oxmon-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oxmon-agent"
path = "src/main.rs"

[dependencies]
oxmon-common = { workspace = true }
oxmon-collector = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
