[package]
name = "oxmon-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oxmon-common = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

[lints]
workspace = true
