[package]
name = "oxmon-alert"
version.workspace = true
edition.workspace = true

[dependencies]
oxmon-common = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob-match = { workspace = true }
serde = { workspace = true }
