[package]
name = "oxmon-cloud"
version.workspace = true
edition.workspace = true


[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
