[package]
name = "oxmon-collector"
version.workspace = true
edition.workspace = true

[dependencies]
oxmon-common = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
