[package]
name = "oxmon-notify"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
oxmon-common = { workspace = true }
oxmon-storage = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
pulldown-cmark = "0.12"
