[package]
name = "oxmon-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oxmon-server"
path = "src/main.rs"

[dependencies]
oxmon-common = { workspace = true }
oxmon-storage = { workspace = true }
oxmon-alert = { workspace = true }
oxmon-notify = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
x509-parser = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tower-http = { workspace = true }
