[package]
name = "oxmon-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oxmon-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
oxmon-common = { workspace = true }
oxmon-storage = { workspace = true }
oxmon-alert = { workspace = true }
oxmon-notify = { workspace = true }
oxmon-cloud = { workspace = true }
oxmon-ai = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_neo = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
x509-parser = { workspace = true }
hickory-resolver = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
rsa = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
rand = { workspace = true }
