[package]
name = "oxmon-storage"
version.workspace = true
edition.workspace = true

[dependencies]
oxmon-common = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
