[package]
name = "oxmon-storage"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
oxmon-common = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

bcrypt = { workspace = true }
base64 = { workspace = true }
rand = "0.8"
ring = { workspace = true }

[dev-dependencies]
tempfile = "3"
