[package]
name = "oxmon-storage"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
oxmon-common = { workspace = true }
# rusqlite：仍用于时序分片存储 (engine.rs / partition.rs)
rusqlite = { workspace = true }
# sea-orm：用于管理数据库 (cert.db) 的 ORM 层
sea-orm = { workspace = true }
migration = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

bcrypt = { workspace = true }
base64 = { workspace = true }
rand = "0.8"
ring = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
